WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245880
REGRESSION (
254987@main
): ASSERTION FAILED: referrerURL.isValid()
https://bugs.webkit.org/show_bug.cgi?id=245880
Summary
REGRESSION (254987@main): ASSERTION FAILED: referrerURL.isValid()
Karl Rackler
Reported
2022-09-30 07:25:20 PDT
** The following JSC test binaries failures have been introduced: testapi Build:
https://build.webkit.org/#/builders/431/builds/1884
History:
https://build.webkit.org/#/builders/Apple-BigSur-Debug-JSC-Tests?numbuilds=50
2022-09-29 00:31:44.779 testapi[45446:39014982] testLoaderResolvesAbsoluteScriptURL()... ASSERTION FAILED: referrerURL.isValid() API/JSAPIGlobalObject.mm(128) : static JSC::Identifier JSC::JSAPIGlobalObject::moduleLoaderResolve(JSC::JSGlobalObject *, JSC::JSModuleLoader *, JSC::JSValue, JSC::JSValue, JSC::JSValue) 1 0x7ffee00dc990 (null) 2 0x112449cb5 _OBJC_$_INSTANCE_METHODS_JSWrapperMap 3 0x1f0fc7e495 (null) 4 0x7ffee00dc990 (null) 5 0x7ffee00dc948 (null) 6 0x7ffee00dc960 (null) 7 0x10fc7e632 WTFPrintBacktrace 8 0x7ffee00dc960 (null) 9 0x112e677e0 vtable for CrashLogPrintStream 10 0x1fe00dc97c (null) 11 0x7ffee00dc990 (null) 12 0x7ffee00dca90 (null) 13 0x10fc7e5d6 WTFReportBacktrace 14 0x0 (null) 15 0x2100000000 (null) 16 0x10fd637bf WTFGetBacktrace 17 0x10fc7e5b6 WTFReportBacktrace 18 0x10fc7e6b9 WTFCrash 19 0x11189f01b WTFCrashWithInfo(int, char const*, char const*, int) 20 0x11042a719 JSC::JSAPIGlobalObject::moduleLoaderResolve(JSC::JSGlobalObject*, JSC::JSModuleLoader*, JSC::JSValue, JSC::JSValue, JSC::JSValue) 21 0x111c01986 JSC::JSModuleLoader::resolve(JSC::JSGlobalObject*, JSC::JSValue, JSC::JSValue, JSC::JSValue) 22 0x111bfe56b JSC::moduleLoaderResolve(JSC::JSGlobalObject*, JSC::CallFrame*) 23 0x244f4ce08638 (null) 24 0x1103fe276 llint_entry 25 0x1103fe276 llint_entry 26 0x1103fe276 llint_entry 27 0x1103d9d1d vmEntryToJavaScript 28 0x11104d75b JSC::JITCode::execute(JSC::VM*, JSC::ProtoCallFrame*) 29 0x1114e1f93 JSC::Interpreter::executeCall(JSC::JSGlobalObject*, JSC::JSObject*, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 30 0x111912599 JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 31 0x111c00cd1 JSC::JSModuleLoader::requestImportModule(JSC::JSGlobalObject*, JSC::Identifier const&, JSC::JSValue, JSC::JSValue, JSC::JSValue) testapi completed with rc=11 (254)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-30 07:26:16 PDT
<
rdar://problem/100617189
>
Yusuke Suzuki
Comment 2
2022-09-30 10:47:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4870
EWS
Comment 3
2022-09-30 13:47:07 PDT
Committed
255046@main
(00bfcf917378): <
https://commits.webkit.org/255046@main
> Reviewed commits have been landed. Closing PR #4870 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug