REGRESSION (254987@main): ASSERTION FAILED: referrerURL.isValid() https://bugs.webkit.org/show_bug.cgi?id=245880 <rdar://100617189>

Reviewed by Alexey Shvayka.

Previously, dynamic-import needs to resolve specifier in the dynamic-import side,
but now the spec is changed and the resolution is separate. As a result, resolve
can now take invalid referrerURL if the script of dynamic-import does not have a
proper source origin, so we crash. But this is OK since computeValidImportSpecifier
can handle invalid referrerURL correctly as before. This patch makes it tolerant
about invalid referrerURL.

* Source/JavaScriptCore/API/JSAPIGlobalObject.mm:
(JSC::JSAPIGlobalObject::moduleLoaderResolve):

Canonical link: https://commits.webkit.org/255046@main